# agentic_manager

./: .gitignore  Makefile  README.md  pyproject.toml
frontend/: custom.d.ts  index.html  package-lock.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatMessage.tsx  InsightCard.tsx  MainContent.tsx  RightPanel.tsx  Sidebar.tsx  StructuredOutputMsg.tsx
frontend/src/context/: ChatContext.tsx  useChatContext.ts
frontend/src/types/: chat.ts
src/: __init__.py  __main__.py  api.py  config.py
src/chatbot/: chatbot.py  coach_data_fetch.py  coach_tools.py  llm.py  one_one_prep_tools old.py  one_one_prep_tools.py  state.py  structured_output_classes.py
src/chatbot/outdated/: outdatd_chatbot.py  outdated_tools.py
src/mocks/: coach_calendar_data.json  coach_feedback_data.json  coach_github_data.json  coach_jira_data.json  coach_org_structure.json  coach_reviews_data.json  coach_updates.json  coach_user_context.json  competency_matrix.json  employee_data.json  gcal.json  github_prs.json  github_prs_results.json  jira.json  staff_eng.py  tech_spec.json  types.py  user_goals.json  user_updates.json
